--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="620.css">
      <link rel="stylesheet" href="960.css">
       <link rel="stylesheet" href="1200.css">
+      <link rel="stylesheet" href="samsung.css">
   </head>
   <body>
     <section class="mainSection">
