--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
           <li><a href="index.html">About</a></li>
           <li><a href="index.html">Contact Us</a></li>
           <li><a href="index.html">Pizza</a></li>
-          <li><a href="index.html">Order now</a></li>
+          <li><a href="order.html">Order now</a></li>
         </ul>
         <ul class="desktop-menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="index.html">About</a></li>
           <li><a href="index.html">Contact Us</a></li>
           <li><a href="index.html">Pizza</a></li>
-          <li><a href="index.html">Order now</a></li>
+          <li><a href="order.html">Order now</a></li>
         </ul>
       </nav>
 
@@ -153,7 +153,7 @@
             <div class="pizza">
               <img src="assets/img/italian.png" alt="" />
               <div class="pizza-content">
-                <h3 class="pizza-name">Pepperoni Pizza</h3>
+                <h3 class="pizza-name">Italian Pizza</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum,
                   error nam? Asperiores tenetur, quibusdam reiciendis nulla
@@ -330,6 +330,5 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
   <script src="script.js"></script>
-
  
 </html>
