--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="mobile-menu">&#9776;</div>
         <ul class="navlinks">
           <li><a href="index.html">Home</a></li>
-          <li><a href="index.html">About</a></li>
+          <li><a href="about">About</a></li>
           <li><a href="index.html">Contact Us</a></li>
           <li><a href="index.html">Pizza</a></li>
           <li><a href="order.html">Order now</a></li>
