ordersystemFunction and Layouts

--- a/order.html
+++ b/order.html
@@ -8,6 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="order.css" />
+    <link rel="stylesheet" href="order620-960.css">
     <title>Pizza App Order System</title>
   </head>
   <body>
@@ -252,6 +253,8 @@
           <p class="text-sm" id="receiptHeaderDate"></p>
           <p class="text-sm" id="receiptCustomerName"></p>
           <p class="text-sm" id="receiptCustomerAddress"></p>
+          <p class="text-sm" id="receiptCustomerEmail"></p>
+          <p class="text-sm" id="receiptCustomerCountry"></p>
         </div>
 
         <div id="receiptDisplayItems">
@@ -277,6 +280,7 @@
       </div>
 
       <img id="receiptBarcode" class="mx-auto">
+      
       <button id="copyReceiptDisplayBtn" >
                 Copy Receipt Text
             </button>
