--- a/order.html
+++ b/order.html
@@ -7,8 +7,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    
     <link rel="stylesheet" href="order.css" />
-    <link rel="stylesheet" href="order620-960.css">
+    <link rel="stylesheet" href="orderResponsive.css">
     <title>Pizza App Order System</title>
   </head>
   <body>
@@ -220,6 +221,7 @@
         </div>
     </section>
 
+    <section class="orderSummaries">
    <div class="pizzaInfo">
     <h2>Your Order Summary</h2>
     <div id="orderSummary">
@@ -227,6 +229,7 @@
         <li>No pizzas added yet.</li>
       </ul>
     </div>
+
 
     <div class="totalOrder">
       <span>Total Order Price: </span>
@@ -244,8 +247,10 @@
     </div>
    </div>
 
-    <div class="section-card receipt-section col-span-full">
-      <h2>Order Receipt</h2>
+</section>
+
+    <div class="receipt section-card receipt-section col-span-full">
+      <h2 class="receiptTitle">Order Receipt</h2>
 
       <div class="receipt-content">
         <div class="receipt-header">
